# tesiM

./: .gitignore  README.md  SKELETON.md  TODO.md  windows_utils.txt
c++/dds_helloWorld/: CMakeLists.txt
c++/dds_multiDomain/: CMakeLists.txt
c++/dds_multicast/src/: CMakeLists.txt  pub.cpp  sub.cpp
c++/dds_perf/: CMakeLists.txt
c++/dds_simpubsub/: CMakeLists.txt
c++/test/dds_sender_receiver/: CMakeLists.txt
c++/test/dds_sender_receiver/src/: pub.cpp  pub.h  receiver.cpp  sender.cpp  sub.cpp  sub.h
c++/test_wildcards/: launch_real.sh  start.sh
cineca/: d_proc_discovery.ipynb  d_proc_transport.ipynb  d_proc_troughput.ipynb  d_proc_wildcards.ipynb  data_processing.ipynb  graph.py  launch_pub.sh  old_data_processor.py  timeshift_calc.ipynb  timeshift_calc.py
cineca/default_fastdds/: CMakeLists.txt
cineca/scripts/: launch_dummy_sub.sh  launch_pub.sh  launch_real_sub.sh  launch_test_singlenode.sh
cineca/test_throughput/: launch_real.sh  start.sh
cineca/test_transport_protocol/: launch_real.sh  launch_shm.sh  start.sh
cineca/test_wildcards/: CMakeLists.txt  launch_dummy.sh  launch_real.sh  start.sh
latex/: .gitignore  0_Abstract.tex  1_Introduction.tex  1_Introduzione.tex  2_PowerManagementHPC.tex  2_StateoftheArt.tex  3_DdsRtpsRps.tex  3_Regale.tex  4_DdsRtpsRps.tex  4_Regale.tex  5_CaseStudies&Evaluation.tex  5_Test.tex  6_Results.tex  7_Model&Dummy.tex  8_Conclusione.tex  Case_Studies_and_Evaluation.tex  DDS_RTPS_ROS.tex  PROF_TODO.md  Power_Management_HPC.tex  REGALE.tex  cleanup_tex.bash  conclusion.tex  glossario.tex  introduction.tex  main.lof  main.synctex(busy)  main.tex  research_project.tex  structure.md
latex/setup/: frontpage.tex  references.bib  setup.tex
metric_control/: TODO.md
metric_control/packets/: automated_test.sh  fastdds_generate_discovery_packages.bash  fastdds_single_discovery_packages.bash
metrics/: .gitignore  README.md  RESULTS.md  TODO.md  W_UPDATE.md
metrics/atomic_perf/: launch_pub.sh  launch_sub.sh  merge.py  multiplecost.py  multiplecost_bar.py  subplot.py  unbalanced_test.sh
metrics/packets/: automated_test.sh  discovery_graph.py  start.sh  tcpdump_monitor.sh
research_project/: TODO.md
research_project/latex/: .gitignore  body.tex  main.tex  note.tex  packages.tex  references.bib  (+1 more)
traffic_control/: .gitignore  README.md  TODO.md  discovery_graph.py  fastdds_generate_discovery_packages.bash  generate_discovery_packages.bash  start.sh
(+214 files in other folders)
